HTML, CSS and JS code was cleaned up for better readability.  Ensured application is easy to navigate and functions accordingly. Loads with no errors and follows proper structure and styling practices. Screenshot attached, as well as starter code.

--- a/Starter Code style.css
+++ b/Starter Code style.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
 }
 
-html, body, .wrapper {
+html,
+body,
+.wrapper {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -24,7 +26,7 @@ body {
 header {
   text-align: center;
   padding: 20px;
-  padding-top: 0;
+  padding-top: 0px;
   color: hsl(206, 17%, 28%);
 }
 
@@ -32,7 +34,7 @@ header {
   background-color: hsl(0, 0%, 100%);
   border-radius: 5px;
   border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0 2px 8px 0;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
   color: hsl(206, 17%, 28%);
   font-size: 18px;
   margin: 0 auto;
@@ -40,8 +42,7 @@ header {
   padding: 30px 40px;
 }
 
-.card-header::after,
-.card-footer::before {
+.card-header::after {
   content: " ";
   display: block;
   width: 100%;
@@ -57,6 +58,14 @@ header {
   text-align: center;
 }
 
+.card-footer::before {
+  content: " ";
+  display: block;
+  width: 100%;
+  background: #e7e9eb;
+  height: 2px;
+}
+
 .card-footer::after {
   content: " ";
   display: block;
@@ -67,7 +76,8 @@ header {
   border: none;
   background-color: hsl(360, 91%, 36%);
   border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 6px 0 rgba(0, 0, 0, 0.2) 0 1px 1px 0;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
+    0px;
   color: hsl(0, 0%, 100%);
   display: inline-block;
   font-size: 22px;
@@ -106,19 +116,18 @@ button[disabled] {
   border-radius: 6px;
   resize: none;
   overflow: hidden;
-  font-size: 1rem;
 }
 
 @media (max-width: 690px) {
   .btn {
     font-size: 1rem;
-    margin: 16px 0 0 0;
+    margin: 16px 0px 0px 0px;
     padding: 10px 15px;
   }
 
-  /* #password {
+  #password {
     font-size: 1rem;
-  } */
+  }
 }
 
 @media (max-width: 500px) {
